# DjangoProjectTest

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
DjangoProjectTest/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
Login/: admin.py  api.py  apps.py  forms.py  models.py  signals.py  tasks.py  utils.py  views.py
middlewares/: CheckToken.py  TokenCheker.py
static/login/: style.css
templates/login/: forgot-password.html  login.html  main.html  register.html
